<resources>
    <string name="app_name">Placement  !!!</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="enter">Enter</string>
    <string name="the_calling_activity_was">The Calling activity was</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="get_the_name">Get The Name</string>
    <string name="the_user_name_was">The user name was</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="student">Student</string>
    <string name="company">Company</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="branch">Branch</string>
    <string name="cpi">CPI</string>
    <string name="company_name">Company Name</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="back_icon">Back Icon</string>
    <string name="add_opportunities">Add Opportunities</string>
    <string name="intern">Intern</string>
    <string name="job">Job</string>
    <string name="position">Position</string>
    <string name="description">Description</string>
    <string name="branches_allowed">Branches Allowed</string>
    <string name="cutoff_cpi">Cutoff CPI</string>
    <string name="deadline">Deadline :</string>
    <string name="date">Date ?</string>
    <string name="add_a_brochure">Add a Brochure</string>
    <string name="register">Register</string>
    <string name="add_interns_jobs">Add Interns/Jobs</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="check_details">Check Details</string>
    <string name="back">Back</string>
    <string name="internships">Internships</string>
    <string name="jobs">Jobs</string>
</resources>
